# CLuaModuleExample

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
include/: custommath.h
scripts/: test.lua
src/: custommath.c
